--- a/fcc_opif/templates/fcc_opif/base.html
+++ b/fcc_opif/templates/fcc_opif/base.html
@@ -1,10 +1,11 @@
-<body>
-    <div class="content container">
-        <div class="row">
-            <div class="col-md-8">
-            {% block content %}
-            {% endblock %}
-            </div>
-        </div>
-    </div>
-</body>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>{% block title %}{% endblock %}</title>
+  </head>
+  <body>
+        {% block content %}
+        {% endblock %}
+  </body>
+</html>
