--- a/fcc_opif/templates/fcc_opif/form_maker.html
+++ b/fcc_opif/templates/fcc_opif/form_maker.html
@@ -11,10 +11,40 @@
 
     <!-- This is the HTML for the file drag/drop area -->
     <body>
+
+        <form name="fileform" method="post">
+            {% csrf_token %}
+            {{ form }}
+        </form>
+
+        <div id="drag-drop-area"></div>
+        <p>Click and drag to create template boxes. Press 'D' to delete selected box.</p>
+        <button onclick="loadSourcePDF(document.getElementById('{{ form.url.auto_id }}').value)">Load File</button>
         <button onclick="saveTemplate()">Save Template</button>
         <button onclick="clearTemplate()">Clear Template</button><br>
         <div id="content"></div>
     </body>
+
+    <!-- And the Javascript that handles file uploading. Uses the Uppy library. -->
+    <link href="https://transloadit.edgly.net/releases/uppy/v1.8.0/uppy.min.css" rel="stylesheet">
+    <script src="https://transloadit.edgly.net/releases/uppy/v1.8.0/uppy.min.js"></script>
+    <script>
+        var filename = "";
+        var uppy = Uppy.Core()
+            .use(Uppy.Dashboard, {
+                inline: true,   
+            target: '#drag-drop-area',
+            width:400,
+            height:200
+            })
+            .use(Uppy.Tus, {endpoint: 'https://master.tus.io/files/'})
+
+        uppy.on('complete', (result) => {
+            console.log('Upload complete! We’ve uploaded these files:', result.successful)
+            filename = result.successful[0].tus.uploadUrl;
+            loadSourcePDF(filename);
+        })
+    </script>
         
     <script src="https://cdn.jsdelivr.net/npm/pdfjs-dist@2.2.228/build/pdf.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fabric.js/3.6.2/fabric.min.js"></script>
@@ -315,7 +345,9 @@
                 template.pages.push(entry.toJSON(['label','pctLeft','pctTop','pctWidth','pctHeight']));
             });
 
-            download(JSON.stringify(template,null,2), "{% get_media_prefix %}/{{ file_id }}.json", "text/plain");
+            document.getElementById("{{ form.boxes.auto_id }}").value = JSON.stringify(template,null,2), "{% get_media_prefix %}/{{ file_id }}.json", "text/plain";
+            //document.forms.fileform.submit();
+            console.log(document.getElementById("{{ form.boxes.auto_id }}").value);
         }
         
         //clearTemplate wipes all selection boxes from all the fabric.Canvases
@@ -329,6 +361,5 @@
             }); 
         }
         loadSourcePDF("{{ file_url }}");
-        console.log("{{ file_url }}")
     </script>
 </html>
